--- a/Day_007/Sets_Assignment.ipynb
+++ b/Day_007/Sets_Assignment.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of it_companies set:  7\n"
+     ]
+    }
+   ],
    "source": [
     "IT_companies = {'Facebook', 'Google', 'Microsoft', 'Apple', 'IBM', 'Oracle', 'Amazon'}\n",
     "A = {19, 22, 24, 20, 25, 26}\n",
@@ -43,9 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Twitter', 'Apple', 'Oracle', 'Facebook', 'Amazon', 'Google', 'Microsoft', 'IBM'}\n"
+     ]
+    }
+   ],
    "source": [
     "IT_companies.add('Twitter')\n",
     "print(IT_companies)"
@@ -60,9 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'LG', 'Amazon', 'IBM', 'Apple', 'Oracle', 'Huawei', 'Google', 'Facebook', 'Twitter', 'Microsoft', 'Nokia', 'Samsung'}\n"
+     ]
+    }
+   ],
    "source": [
     "IT_companies.update(['Samsung','Huawei','Nokia','LG'])\n",
     "print(IT_companies)"
@@ -77,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joining A and B:  {19, 20, 22, 24, 25, 26, 27, 28}\n"
+     ]
+    }
+   ],
    "source": [
     "print('Joining A and B: ', A.union(B)) "
    ]
@@ -132,9 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intersection of A and B:  {19, 20, 22, 24, 25, 26}\n"
+     ]
+    }
+   ],
    "source": [
     "print('Intersection of A and B: ', A.intersection(B))"
    ]
@@ -148,9 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A is a subset of B :  True\n"
+     ]
+    }
+   ],
    "source": [
     "print('A is a subset of B : ', A.issubset(B))"
    ]
@@ -164,9 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A and B are disjoint:  False\n"
+     ]
+    }
+   ],
    "source": [
     "print('A and B are disjoint: ', A.isdisjoint(B))"
    ]
@@ -180,9 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A with B:  {19, 20, 22, 24, 25, 26, 27, 28}\n",
+      "B with A:  {19, 20, 22, 24, 25, 26, 27, 28}\n"
+     ]
+    }
+   ],
    "source": [
     "print('A with B: ', A.union(B))\n",
     "print('B with A: ', B.union(A))"
@@ -197,9 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Symmetric difference of A and B:  {27, 28}\n"
+     ]
+    }
+   ],
    "source": [
     "print('Symmetric difference of A and B: ',A.symmetric_difference(B))"
    ]
@@ -213,9 +286,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'B' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m A\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m B\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mB\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'B' is not defined"
+     ]
+    }
+   ],
    "source": [
     "del A\n",
     "del B\n",
@@ -238,9 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age_set is smaller than age(the list):  True\n"
+     ]
+    }
+   ],
    "source": [
     "age = [22, 19, 24, 25, 26, 24, 25, 24] \n",
     "age_st = set(age)\n",
@@ -272,9 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique words in the sentence:  {'teacher', 'am', 'a', 'love', 'I', 'teach', 'to', 'inspire', 'people', 'and'}\n",
+      "The number of unique words in the sentence: 10\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = 'I am a teacher and I love to inspire and teach people'\n",
     "print('Unique words in the sentence: ',set(sentence.split()))\n",
@@ -283,8 +385,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
