--- a/Day_010/Loops_Assignment.ipynb
+++ b/Day_010/Loops_Assignment.ipynb
@@ -23,9 +23,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "for number in range(11):\n",
     "    print(number)\n",
@@ -45,9 +74,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(10,-1,-1):\n",
     "    print(i)\n",
@@ -68,9 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "#\n",
+      "##\n",
+      "###\n",
+      "####\n",
+      "#####\n",
+      "######\n",
+      "#######\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(8):\n",
     "    print('#' * i)"
@@ -85,9 +158,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#  #  #  #  #  #  #  #  \n",
+      "#  #  #  #  #  #  #  #  \n",
+      "#  #  #  #  #  #  #  #  \n",
+      "#  #  #  #  #  #  #  #  \n",
+      "#  #  #  #  #  #  #  #  \n",
+      "#  #  #  #  #  #  #  #  \n",
+      "#  #  #  #  #  #  #  #  \n",
+      "#  #  #  #  #  #  #  #  \n",
+      "#  #  #  #  #  #  #  #  \n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(9):\n",
     "    print('#  ' * 8)"
@@ -102,9 +191,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 x 0 =  0\n",
+      "1 x 1 =  1\n",
+      "2 x 2 =  4\n",
+      "3 x 3 =  9\n",
+      "4 x 4 =  16\n",
+      "5 x 5 =  25\n",
+      "6 x 6 =  36\n",
+      "7 x 7 =  49\n",
+      "8 x 8 =  64\n",
+      "9 x 9 =  81\n",
+      "10 x 10 =  100\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(11):\n",
     "    print(f'{i} x {i} =  {i * i}')"
@@ -119,9 +226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n",
+      "Numpy\n",
+      "Pandas\n",
+      "Django\n",
+      "Flask\n"
+     ]
+    }
+   ],
    "source": [
     "list = ['Python', 'Numpy','Pandas','Django', 'Flask']\n",
     "for item in list:\n",
@@ -137,9 +256,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "22\n",
+      "24\n",
+      "26\n",
+      "28\n",
+      "30\n",
+      "32\n",
+      "34\n",
+      "36\n",
+      "38\n",
+      "40\n",
+      "42\n",
+      "44\n",
+      "46\n",
+      "48\n",
+      "50\n",
+      "52\n",
+      "54\n",
+      "56\n",
+      "58\n",
+      "60\n",
+      "62\n",
+      "64\n",
+      "66\n",
+      "68\n",
+      "70\n",
+      "72\n",
+      "74\n",
+      "76\n",
+      "78\n",
+      "80\n",
+      "82\n",
+      "84\n",
+      "86\n",
+      "88\n",
+      "90\n",
+      "92\n",
+      "94\n",
+      "96\n",
+      "98\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(101):\n",
     "    if i%2 == 0:\n",
@@ -155,9 +332,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "21\n",
+      "23\n",
+      "25\n",
+      "27\n",
+      "29\n",
+      "31\n",
+      "33\n",
+      "35\n",
+      "37\n",
+      "39\n",
+      "41\n",
+      "43\n",
+      "45\n",
+      "47\n",
+      "49\n",
+      "51\n",
+      "53\n",
+      "55\n",
+      "57\n",
+      "59\n",
+      "61\n",
+      "63\n",
+      "65\n",
+      "67\n",
+      "69\n",
+      "71\n",
+      "73\n",
+      "75\n",
+      "77\n",
+      "79\n",
+      "81\n",
+      "83\n",
+      "85\n",
+      "87\n",
+      "89\n",
+      "91\n",
+      "93\n",
+      "95\n",
+      "97\n",
+      "99\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(101):\n",
     "    if i%2==1:\n",
@@ -180,9 +414,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of all numbers is 5050\n"
+     ]
+    }
+   ],
    "source": [
     "a = 0\n",
     "for i in range(101):\n",
@@ -199,9 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of all evens is 2550 and the sum of all odds is 2500\n"
+     ]
+    }
+   ],
    "source": [
     "a = 0\n",
     "b = 0\n",
@@ -229,9 +479,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finland\n",
+      "Iceland\n",
+      "Ireland\n",
+      "Marshall Islands\n",
+      "Netherlands\n",
+      "New Zealand\n",
+      "Poland\n",
+      "Solomon Islands\n",
+      "Swaziland\n",
+      "Switzerland\n",
+      "Thailand\n"
+     ]
+    }
+   ],
    "source": [
     "countries = [\n",
     "  'Afghanistan',\n",
@@ -443,9 +711,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lemon\n",
+      "mango\n",
+      "orange\n",
+      "banana\n"
+     ]
+    }
+   ],
    "source": [
     "fruit_list = ['banana', 'orange', 'mango', 'lemon']\n",
     "for i in range(len(fruit_list)-1,-1,-1):\n",
@@ -531,8 +810,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
