--- a/Day_016/Python_DateTime_Assignment.ipynb
+++ b/Day_016/Python_DateTime_Assignment.ipynb
@@ -16,18 +16,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "now = datetime.now()\n",
-    "print(now)\n",
-    "day = now.day\n",
-    "month = now.month\n",
-    "year = now.year\n",
-    "hour = now.hour\n",
-    "minute = now.minute\n",
-    "timestamp = now.timestamp()"
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get current date and time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_datetime = datetime.now()\n",
+    "\n",
+    "current_day = current_datetime.day\n",
+    "current_month = current_datetime.month\n",
+    "current_year = current_datetime.year\n",
+    "current_hour = current_datetime.hour\n",
+    "current_minute = current_datetime.minute\n",
+    "current_timestamp = current_datetime.timestamp()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print the results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Day: 7\n",
+      "Current Month: 1\n",
+      "Current Year: 2024\n",
+      "Current Hour: 9\n",
+      "Current Minute: 29\n",
+      "Current Timestamp: 1704616185.712927\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Current Day: {current_day}\")\n",
+    "print(f\"Current Month: {current_month}\")\n",
+    "print(f\"Current Year: {current_year}\")\n",
+    "print(f\"Current Hour: {current_hour}\")\n",
+    "print(f\"Current Minute: {current_minute}\")\n",
+    "print(f\"Current Timestamp: {current_timestamp}\")"
    ]
   },
   {
@@ -39,12 +89,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Date = now.strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
-    "print(date)"
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get current date and time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_datetime = datetime.now()\n",
+    "formatted_datetime = current_datetime.strftime(\"%m/%d/%Y, %H:%M:%S\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print the formatted result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Month/Day/Year, Hour:Minutes:Seconds: 01/07/2024, 09:32:45\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Month/Day/Year, Hour:Minutes:Seconds: {formatted_datetime}\")"
    ]
   },
   {
@@ -56,9 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date_string = 5 December, 2019\n",
+      "date_object = 2019-12-05 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "date_string = \"5 December, 2019\"\n",
     "print(\"date_string =\", date_string)\n",
@@ -75,14 +174,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_day = date(2023,2,20)\n",
-    "new_year = date(2024,1,1)\n",
-    "time_to_new_year = new_year - t_day\n",
-    "print(f'Time to new year is {time_to_new_year} ')"
+    "from datetime import datetime, timedelta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get the current date and time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_datetime = datetime.now()\n",
+    "new_year = datetime(current_datetime.year, 12, 31, 23, 59, 59)\n",
+    "time_difference = new_year - current_datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print the result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time difference between now and New Year: 359 days, 14:23:12.461012\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Time difference between now and New Year: {time_difference}\")"
    ]
   },
   {
@@ -94,11 +232,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'The time difference between now and 1 January, 1970,midnight in seconds is {timestamp} ')"
+    "from datetime import datetime\n",
+    "\n",
+    "current_datetime = datetime.now()\n",
+    "Datetime = datetime(1970, 1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate the time difference\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_difference = current_datetime - Datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print the result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time difference between 1 January 1970 and now: 19729 days, 9:38:48.946247\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Time difference between 1 January 1970 and now: {time_difference}\")"
    ]
   },
   {
@@ -114,6 +295,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
