--- a/Day_021/Classes_and_Objects_Assignment.ipynb
+++ b/Day_021/Classes_and_Objects_Assignment.ipynb
@@ -23,44 +23,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ages = [31, 26, 34, 37, 27, 26, 32, 32, 26, 27, 27, 24, 32, 33, 27, 25, 26, 38, 37, 31, 34, 24, 33, 29, 26]\n",
-    "\n",
-    "print('Count:', data.count()) # 25\n",
-    "print('Sum: ', data.sum()) # 744\n",
-    "print('Min: ', data.min()) # 24\n",
-    "print('Max: ', data.max()) # 38\n",
-    "print('Range: ', data.range()) # 14\n",
-    "print('Mean: ', data.mean()) # 30\n",
-    "print('Median: ', data.median()) # 29\n",
-    "print('Mode: ', data.mode()) # {'mode': 26, 'count': 5}\n",
-    "print('Standard Deviation: ', data.std()) # 4.2\n",
-    "print('Variance: ', data.var()) # 17.5\n",
-    "print('Frequency Distribution: ', data.freq_dist()) # [(20.0, 26), (16.0, 27), (12.0, 32), (8.0, 37), (8.0, 34), (8.0, 33), (8.0, 31), (8.0, 24), (4.0, 38), (4.0, 29), (4.0, 25)]"
+    "import statistics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count: 25\n",
+      "Sum:  744\n",
+      "Min:  24\n",
+      "Max:  38\n",
+      "Range:  14\n",
+      "Mean:  29.76\n",
+      "Median:  29\n",
+      "Mode:  26\n",
+      "Standard Deviation:  4.2747319604079665\n",
+      "Variance:  18.273333333333333\n"
+     ]
+    }
+   ],
    "source": [
-    "# you output should look like this\n",
-    "print(data.describe())\n",
-    "Count: 25\n",
-    "Sum:  744\n",
-    "Min:  24\n",
-    "Max:  38\n",
-    "Range:  14\n",
-    "Mean:  30\n",
-    "Median:  29\n",
-    "Mode:  (26, 5)\n",
-    "Variance:  17.5\n",
-    "Standard Deviation:  4.2\n",
-    "Frequency Distribution: [(20.0, 26), (16.0, 27), (12.0, 32), (8.0, 37), (8.0, 34), (8.0, 33), (8.0, 31), (8.0, 24), (4.0, 38), (4.0, 29), (4.0, 25)]"
+    "ages = [31, 26, 34, 37, 27, 26, 32, 32, 26, 27, 27, 24, 32, 33, 27, 25, 26, 38, 37, 31, 34, 24, 33, 29, 26]\n",
+    "\n",
+    "print('Count:', len(ages))  # 25\n",
+    "print('Sum: ', sum(ages))  # 744\n",
+    "print('Min: ', min(ages))  # 24\n",
+    "print('Max: ', max(ages))  # 38\n",
+    "print('Range: ', max(ages) - min(ages))  # 14\n",
+    "print('Mean: ', sum(ages) / len(ages))  # 30.0\n",
+    "print('Median: ', statistics.median(ages))  # 29\n",
+    "print('Mode: ', statistics.mode(ages))  # 26\n",
+    "print('Standard Deviation: ', statistics.stdev(ages))  # 4.2\n",
+    "print('Variance: ', statistics.variance(ages))  # 17.5\n"
    ]
   },
   {
@@ -72,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,9 +165,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count: 25\n",
+      "Sum:  744\n",
+      "Min:  24\n",
+      "Max:  38\n",
+      "Range:  14\n",
+      "Mean:  29.76\n",
+      "Median:  29\n",
+      "Mode:  (26, 5)\n",
+      "Variance:  18.273333333333333\n",
+      "Standard Deviation:  4.2747319604079665\n",
+      "Frequency Distribution:  [(5, 26), (4, 27), (3, 32), (2, 37), (2, 34), (2, 33), (2, 31), (2, 24), (1, 38), (1, 29), (1, 25)]\n"
+     ]
+    }
+   ],
    "source": [
     "ages = [31, 26, 34, 37, 27, 26, 32, 32, 26, 27, 27, 24, 32, 33, 27, 25, 26, 38, 37, 31, 34, 24, 33, 29, 26]\n",
     "data = Statistics(ages)\n",
@@ -186,9 +208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First name:  Adam\n",
+      "Last name:  Abbas Abba\n",
+      "Incomes:  [(1000000, 'salary'), (500000, 'bonus')]\n",
+      "Expenses:  [(50000, 'books'), (600000, 'fuel')]\n",
+      "Total Income:  1500000\n",
+      "Total Expense:  650000\n",
+      "Account Balance:  850000\n"
+     ]
+    }
+   ],
    "source": [
     "class PersonAccount:\n",
     "    '''A class to calculate incomes and expenses of persons'''\n",
