--- a/Day_005/List_Assignment.ipynb
+++ b/Day_005/List_Assignment.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[] []\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = list()\n",
     "list2 = []\n",
@@ -41,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of the list is 7\n"
+     ]
+    }
+   ],
    "source": [
     "Length_of_the_list = len(Names)\n",
     "print(f'The length of the list is {Length_of_the_list}') "
@@ -74,14 +90,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first, middle, and last items in the list are Bello, Addau, and Fadimat respectively\n"
+     ]
+    }
+   ],
    "source": [
-    "first_item =  Names[0] \n",
-    "middle_item =  Names[int(len(top)/2)] \n",
-    "last_item =  Names[-1]  \n",
-    "print(f'The first, middle and last items in the list are {first_item},{middle_item} and {last_item} respectively ')"
+    "first_item = Names[0]\n",
+    "middle_item = Names[int(len(Names)/2)]\n",
+    "last_item = Names[-1]\n",
+    "print(f'The first, middle, and last items in the list are {first_item}, {middle_item}, and {last_item} respectively')"
    ]
   },
   {
@@ -93,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Facebook', 'Google', 'Microsoft', 'Apple', 'IBM', 'Oracle', 'Amazon']\n"
+     ]
+    }
+   ],
    "source": [
     "print(IT_companies)"
    ]
@@ -141,9 +173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(IT_companies))"
    ]
@@ -157,9 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Facebook Apple Amazon\n"
+     ]
+    }
+   ],
    "source": [
     "first_company = IT_companies[0]\n",
     "middle_company = IT_companies[len(IT_companies)//2]\n",
@@ -179,9 +227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Blackberry', 'Google', 'Microsoft', 'Apple', 'IBM', 'Oracle', 'Amazon']\n"
+     ]
+    }
+   ],
    "source": [
     "IT_companies[0] = 'Blackberry'\n",
     "print(IT_companies)"
@@ -196,9 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Google', 'Blackberry', 'Google', 'Microsoft', 'Apple', 'IBM', 'Oracle', 'Amazon']\n"
+     ]
+    }
+   ],
    "source": [
     "IT_companies.insert(0,'Google')\n",
     "print(IT_companies)"
@@ -213,9 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Google', 'Blackberry', 'Google', 'Microsoft', 'Zipline', 'Apple', 'IBM', 'Oracle', 'Amazon']\n"
+     ]
+    }
+   ],
    "source": [
     "IT_companies.insert(len(IT_companies)//2,'Zipline')\n",
     "print(IT_companies)"
@@ -230,9 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['GOOGLE', 'Blackberry', 'Google', 'Microsoft', 'Zipline', 'Apple', 'IBM', 'Oracle', 'Amazon']\n"
+     ]
+    }
+   ],
    "source": [
     "IT_companies[0] = IT_companies[0].upper()\n",
     "print(IT_companies)"
@@ -247,9 +327,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GOOGLE#;  Blackberry#;  Google#;  Microsoft#;  Zipline#;  Apple#;  IBM#;  Oracle#;  Amazon'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'#;  '.join(IT_companies)"
    ]
@@ -263,9 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'Facebook' in IT_companies "
    ]
@@ -279,9 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Amazon', 'Apple', 'Blackberry', 'GOOGLE', 'Google', 'IBM', 'Microsoft', 'Oracle', 'Zipline']\n"
+     ]
+    }
+   ],
    "source": [
     "IT_companies.sort() \n",
     "print(IT_companies)"
@@ -296,13 +406,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Zipline', 'Oracle', 'Microsoft', 'IBM', 'Google', 'GOOGLE', 'Blackberry', 'Apple', 'Amazon']\n"
+     ]
+    }
+   ],
    "source": [
     "IT_companies.reverse() \n",
-    "print(IT_companies)\n",
-    "\n"
+    "print(IT_companies)"
    ]
   },
   {
@@ -314,9 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Zipline', 'Oracle', 'Microsoft']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "IT_companies[:3]"
    ]
@@ -330,9 +458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Blackberry', 'Apple', 'Amazon']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "IT_companies[-3:]"
    ]
@@ -346,9 +485,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Google']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "IT_companies[len(IT_companies)//2:len(IT_companies)//2+1]"
    ]
@@ -362,9 +512,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Oracle',\n",
+       " 'Microsoft',\n",
+       " 'IBM',\n",
+       " 'Google',\n",
+       " 'GOOGLE',\n",
+       " 'Blackberry',\n",
+       " 'Apple',\n",
+       " 'Amazon']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "IT_companies.pop(0)\n",
     "IT_companies"
@@ -379,9 +547,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GOOGLE'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "IT_companies.pop(int(len(IT_companies)/2))"
    ]
@@ -395,9 +574,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amazon'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "IT_companies.pop()"
    ]
@@ -411,9 +601,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "IT_companies.clear()\n",
     "IT_companies"
@@ -437,9 +638,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['HTML', 'CSS', 'JS', 'React', 'Redux', 'Node', 'Express', 'MongoDB']\n"
+     ]
+    }
+   ],
    "source": [
     "front_end = ['HTML', 'CSS', 'JS', 'React', 'Redux']\n",
     "back_end = ['Node','Express', 'MongoDB']\n",
@@ -457,9 +666,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "full_stack = front_end.copy() \n",
     "full_stack.index('Redux')"
@@ -474,9 +694,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['HTML',\n",
+       " 'CSS',\n",
+       " 'JS',\n",
+       " 'React',\n",
+       " 'Redux',\n",
+       " 'Python',\n",
+       " 'SQL',\n",
+       " 'Node',\n",
+       " 'Express',\n",
+       " 'MongoDB']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "full_stack.insert(5,'Python') \n",
     "full_stack.insert(full_stack.index('Python')+1,'SQL')\n",
@@ -507,9 +747,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[19, 19, 20, 22, 24, 24, 24, 25, 25, 26]\n",
+      "The minimum age is 19 and the maximum age is 26 \n"
+     ]
+    }
+   ],
    "source": [
     "ages = [19, 22, 19, 24, 20, 25, 26, 24, 25, 24]\n",
     "ages.sort()\n",
@@ -528,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,9 +793,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 24\n",
+      "The median age of the ages is 24.0\n"
+     ]
+    }
+   ],
    "source": [
     "ages.sort()\n",
     "ages_length = len(ages)\n",
@@ -572,9 +830,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average age is 22.75\n"
+     ]
+    }
+   ],
    "source": [
     "average = sum(ages)/len(ages) \n",
     "print(f'The average age is {average}')"
@@ -589,9 +855,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The range of the ages is 7\n"
+     ]
+    }
+   ],
    "source": [
     "rng = max(ages) - min(ages) \n",
     "print(f'The range of the ages is {rng}')"
@@ -606,9 +880,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "abs(min(ages) - average) == abs(max(ages)- average)"
    ]
@@ -622,9 +907,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mid country in the countries list is Lesotho\n",
+      "The middle country in the list is Lesotho \n"
+     ]
+    }
+   ],
    "source": [
     "countries = [\n",
     "  'Afghanistan',\n",
@@ -846,9 +1140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of the two halves are 96 and 97 \n"
+     ]
+    }
+   ],
    "source": [
     "countries_length = len(countries) \n",
     "first_half = countries[:countries_length//2]\n",
@@ -868,9 +1170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The scandic countries in the last list given are ['Finland', 'Sweden', 'Norway', 'Denmark']\n"
+     ]
+    }
+   ],
    "source": [
     "CH,RU,US,*scandic = ['China', 'Russia', 'USA', 'Finland', 'Sweden', 'Norway', 'Denmark']\n",
     "scandic\n",
@@ -879,8 +1189,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
