--- a/Day_008/Dictionaries_Assignments.ipynb
+++ b/Day_008/Dictionaries_Assignments.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of student dict:  9\n"
+     ]
+    }
+   ],
    "source": [
     "print('length of student dict: ', len(student))"
    ]
@@ -92,9 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "student['skills']\n",
     "print(type(student['skills']))"
@@ -109,9 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking the modification: {'first_name': 'Adam', 'last_name': 'Abbas', 'gender': 'male', 'age': 24, 'marital_status': 'single', 'skills': ['Data_Science', 'HTML'], 'country': 'Nigeria', 'city': 'Kano', 'address': 'Plot_209_Rijiyar_Zaki'}\n"
+     ]
+    }
+   ],
    "source": [
     "student['skills'].append('HTML')\n",
     "print('Checking the modification:', student)"
@@ -126,9 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dictionary keys as a list:  dict_keys(['first_name', 'last_name', 'gender', 'age', 'marital_status', 'skills', 'country', 'city', 'address'])\n"
+     ]
+    }
+   ],
    "source": [
     "print('dictionary keys as a list: ',student.keys())"
    ]
@@ -142,9 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dictionary value as a list:  dict_values(['Adam', 'Abbas', 'male', 24, 'single', ['Data_Science', 'HTML'], 'Nigeria', 'Kano', 'Plot_209_Rijiyar_Zaki'])\n"
+     ]
+    }
+   ],
    "source": [
     "print('dictionary value as a list: ',student.values())"
    ]
@@ -158,9 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list of tuples of dict items:  dict_items([('first_name', 'Adam'), ('last_name', 'Abbas'), ('gender', 'male'), ('age', 24), ('marital_status', 'single'), ('skills', ['Data_Science', 'HTML']), ('country', 'Nigeria'), ('city', 'Kano'), ('address', 'Plot_209_Rijiyar_Zaki')])\n"
+     ]
+    }
+   ],
    "source": [
     "print('list of tuples of dict items: ',student.items())"
    ]
@@ -174,9 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'first_name': 'Adam', 'last_name': 'Abbas', 'gender': 'male', 'marital_status': 'single', 'skills': ['Data_Science', 'HTML'], 'country': 'Nigeria', 'city': 'Kano', 'address': 'Plot_209_Rijiyar_Zaki'}\n"
+     ]
+    }
+   ],
    "source": [
     "student.pop('age')\n",
     "print(student)"
@@ -191,9 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'student' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m student\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mstudent\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'student' is not defined"
+     ]
+    }
+   ],
    "source": [
     "del student\n",
     "print(student)"
@@ -201,8 +269,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
