--- a/Day_009/Conditionals_Assignment.ipynb
+++ b/Day_009/Conditionals_Assignment.ipynb
@@ -28,9 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are old enough to drive\n"
+     ]
+    }
+   ],
    "source": [
     "a = int(input('Enter your age: '))\n",
     "if a >= 18:\n",
@@ -51,9 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am 6 years older than you\n"
+     ]
+    }
+   ],
    "source": [
     "my_age = 30\n",
     "your_age = int(input('Enter your age:'))\n",
@@ -85,9 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is smaller than b\n"
+     ]
+    }
+   ],
    "source": [
     "a = int(input('Enter number one:'))\n",
     "b = int(input('Enter number two:'))\n",
@@ -120,9 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\n"
+     ]
+    }
+   ],
    "source": [
     "score = 60\n",
     "\n",
@@ -147,9 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The season is Winter\n"
+     ]
+    }
+   ],
    "source": [
     "user_input = 'December'\n",
     "if user_input == 'September' or user_input == 'October' or user_input == 'November':\n",
@@ -173,16 +213,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The modified list is: ['banana', 'orange', 'mango', 'lemon', 'apple']\n"
+     ]
+    }
+   ],
    "source": [
-    "fruit = 'cashew'\n",
-    "if fruit not in fruits:\n",
-    "    fruits.append(fruit)\n",
-    "    print(fruits)\n",
-    "else: \n",
-    "    print('The fruit already exists in the list')"
+    "fruits = ['banana', 'orange', 'mango', 'lemon']\n",
+    "new_fruit = 'apple'\n",
+    "\n",
+    "if new_fruit not in fruits:\n",
+    "    fruits.append(new_fruit)\n",
+    "    print(f'The modified list is: {fruits}')\n",
+    "else:\n",
+    "    print('That fruit already exists in the list')"
    ]
   },
   {
@@ -211,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node\n"
+     ]
+    }
+   ],
    "source": [
     "if 'skills' in person:\n",
     "    print(person['skills'][int(len(person['skills'])/2)])"
@@ -255,9 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['JavaScript', 'React', 'Node', 'MongoDB', 'Python']\n"
+     ]
+    }
+   ],
    "source": [
     "if 'skills' in person:\n",
     "    if 'Python' in person['skills']:\n",
@@ -274,9 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He is a fullstack developer\n"
+     ]
+    }
+   ],
    "source": [
     "if 'skills' in person:\n",
     "    if 'Node' and 'MongoDB' in person['skills']:\n",
@@ -300,9 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Asabeneh Yetayeh lives in Finland. He is married.\n"
+     ]
+    }
+   ],
    "source": [
     "first_name = person['first_name']\n",
     "last_name = person['last_name']\n",
@@ -314,8 +396,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
