--- a/Day_018/Regular_Expression_Assignment.ipynb
+++ b/Day_018/Regular_Expression_Assignment.ipynb
@@ -23,16 +23,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 'love'),\n",
+       " (5, 'you'),\n",
+       " (3, 'can'),\n",
+       " (2, 'what'),\n",
+       " (2, 'teaching'),\n",
+       " (2, 'not'),\n",
+       " (2, 'else'),\n",
+       " (2, 'do'),\n",
+       " (2, 'I'),\n",
+       " (1, 'which'),\n",
+       " (1, 'to'),\n",
+       " (1, 'the'),\n",
+       " (1, 'something'),\n",
+       " (1, 'if'),\n",
+       " (1, 'give'),\n",
+       " (1, 'develop'),\n",
+       " (1, 'capabilities'),\n",
+       " (1, 'application'),\n",
+       " (1, 'an'),\n",
+       " (1, 'all'),\n",
+       " (1, 'Python'),\n",
+       " (1, 'If')]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[\n",
     "    (6, 'love'),\n",
@@ -62,9 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('love', 6)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "paragraph = 'I love teaching. If you do not love teaching what else can you love. I love Python if you do not love something which can give you all the capabilities to develop an application what else can you love.'\n",
     "words = paragraph.replace('.','').split(' ')\n",
@@ -84,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,10 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['-1', '2', '-4', '-3', '-1', '0', '4', '8']\n",
+      "The distance between the two furthest particles is 12 \n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
     "string = 'The position of some particles on the horizontal x-axis are -12, -4, -3 and -1 in the negative direction, 0 at origin, 4 and 8 in the positive direction. Extract these numbers from this whole text and find the distance between the two furthest particles.'\n",
     "regex= r'-\\d|\\d'\n",
     "points = re.findall(regex,string)\n",
@@ -133,9 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "pattern = r\"^[_a-z]\\w*$\"\n",
     "def is_valid_variable(name):\n",
@@ -144,7 +198,9 @@
     "    if not re.match(pattern,name):\n",
     "        print(False)\n",
     "    else:\n",
-    "        print(True)"
+    "        print(True)\n",
+    "        \n",
+    "print(True)"
    ]
   },
   {
@@ -156,9 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "is_valid_variable('Name')\n",
     "is_valid_variable('Name')\n",
@@ -182,22 +249,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i am a teacher and i love teaching there is nothing as more rewarding as educating and empowering people i found teaching more interesting than any other jobs does this motivate you to be a teacher\n",
+      "[('i', 3), ('a', 2), ('teacher', 2)]\n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    cleaned_text = re.sub(r'[^a-zA-Z\\s]', '', text)\n",
+    "    return cleaned_text.lower()\n",
+    "\n",
+    "def most_frequent_words(text):\n",
+    "    words = text.split()\n",
+    "    word_counts = Counter(words)\n",
+    "    most_common = word_counts.most_common(3)  \n",
+    "    return most_common\n",
+    "\n",
     "sentence = '''%I $am@% a %tea@cher%, &and& I lo%#ve %tea@ching%;. There $is nothing; &as& mo@re rewarding as educa@ting &and& @emp%o@wering peo@ple. ;I found tea@ching m%o@re interesting tha@n any other %jo@bs. %Do@es thi%s mo@tivate yo@u to be a tea@cher!?'''\n",
     "\n",
-    "print(clean_text(sentence));\n",
-    "I am a teacher and I love teaching There is nothing as more rewarding as educating and empowering people I found teaching more interesting than any other jobs Does this motivate you to be a teacher\n",
-    "print(most_frequent_words(cleaned_text)) # [(3, 'I'), (2, 'teaching'), (2, 'teacher')]"
+    "cleaned_text = clean_text(sentence)\n",
+    "print(cleaned_text)\n",
+    "print(most_frequent_words(cleaned_text))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 'I'), (2, 'teaching'), (2, 'teacher')]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sentence = '''%I $am@% a %tea@cher%, &and& I lo%#ve %tea@ching%;. There $is nothing; &as& mo@re rewarding as educa@ting &and& @emp%o@wering peo@ple. ;I found tea@ching m%o@re interesting tha@n any other %jo@bs. %Do@es thi%s mo@tivate yo@u to be a tea@cher!?'''\n",
     "pattern = r'[^\\w\\s]'\n",
@@ -219,8 +319,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
