--- a/Day_020/PIP_Assignment.ipynb
+++ b/Day_020/PIP_Assignment.ipynb
@@ -35,7 +35,15 @@
     "for word in words:\n",
     "    words_dict[word] = words_dict.get(word,0) + 1\n",
     "words_sorted = sorted(words_dict.items(),key=lambda x:x[1],reverse=True)\n",
-    "result = [(word[1],word[0]) for word in words_sorted]\n",
+    "result = [(word[1],word[0]) for word in words_sorted]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(f' result: {result[:10]}')"
    ]
   },
@@ -168,7 +176,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "\n",
+    "def get_countries_data():\n",
+    "    api_url =   \n",
+    "    response = requests.get(api_url)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        countries_data = response.json()\n",
+    "        return countries_data\n",
+    "    else:\n",
+    "        print(f\"Failed to retrieve data. Status code: {response.status_code}\")\n",
+    "        return None"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,8 +296,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
