--- a/Day_022/Web_Scraping_Assignment.ipynb
+++ b/Day_022/Web_Scraping_Assignment.ipynb
@@ -30,13 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbs4\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BeautifulSoup\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
+     ]
+    }
+   ],
    "source": [
-    "import json\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import json"
    ]
   },
   {
@@ -52,14 +64,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "url = 'http://www.bu.edu/president/boston-university-facts-stats/'\n",
     "response = requests.get(url)\n",
-    "content = response.content\n",
-    "soup = BeautifulSoup(content, 'html.parser')\n",
-    "facts = soup.body.get_text()\n",
-    "print(soup.body.get_text())\n",
-    "with open('boston_facts.json','w') as f:\n",
-    "    json.dump(facts,f)"
+    "\n",
+    "if response.status_code == 200:\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "    paragraphs = [p.get_text() for p in soup.find_all('p')]\n",
+    "\n",
+    "    data = {'paragraphs': paragraphs}\n",
+    "\n",
+    "    with open('scraped_data.json', 'w', encoding='utf-8') as json_file:\n",
+    "        json.dump(data, json_file, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "    print('Data has been successfully scraped and stored in scraped_data.json')\n",
+    "else:\n",
+    "    print(f'Failed to retrieve data. Status code: {response.status_code}')\n"
    ]
   },
   {
@@ -135,8 +156,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "KHALIPHA.venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
